--- a/index.html
+++ b/index.html
@@ -1,18 +1,34 @@
-<!DOCTY PE 	html>
+<!DOCTYPE html>
+<html>
 <head>
-<meta charset="utf-8" />
-<title> Curriculum vitae de Bruce Wayne </title>
+    <meta charset="utf-8" />
+    <title>Curriculum vitae de Bruce Wayne</title>
 </head>
 <body>
-<h1>Curriculum vitae de Bruce Wayne </h1>
-<h2>Curriculum vitae de Bruce Wayne </h2>
-<h3>Curriculum vitae de Bruce Wayne </h3>
-<h4>Curriculum vitae de Bruce Wayne </h4>
-<h5>Curriculum vitae de Bruce Wayne </h5>
-<ul>
-<li> Nombre completo: <strong> Bruce Wayne </strong> </li>
-<li>Fecha de nacimiento: <strong> 1/5/1939 </strong> </li>
-<li>Lugar de nacimiento: <strong> Gotham City </strong> </li>
-</ul>
+
+    <h1>CURRICULUM VITAE DE BRUCE WAYNE</h1>
+
+    <h2>Datos Personales</h2>
+    <ul>
+        <li>Nombre completo: <strong>Bruce Wayne</strong></li>
+        <li>Fecha de nacimiento: <strong>1/5/1939</strong></li>
+        <li>Lugar de nacimiento: <strong>Gotham City</strong></li>
+    </ul>
+
+    <h2>Formación Académica</h2>
+    <ul>
+        <li><strong>1956-1961:</strong> Universidad del Espantapájaros</li>
+        <li><strong>1952-1956:</strong> Instituto de Dos Caras</li>
+        <li><strong>1944-1952:</strong> Escuela Primaria del Joker</li>
+    </ul>
+
+    <h2>Experiencia Laboral</h2>
+    <ul>
+        <li><strong>1975-1985:</strong> En el paro</li>
+        <li><strong>1965-1975:</strong> Cazavillanos y demás chusma</li>
+        <li><strong>1962-1965:</strong> Aprendiz de superhéroe</li>
+    </ul>
+
 </body>
 </html>
+
